# fun-images

./: Cargo.toml  LICENSE.md  README.md
showcase/: file-generation.md
src/: farey.rs  main.rs  mandelbrot.rs  perlin.rs  sierpinski.rs  ulam_spiral.rs  waves.rs
