[package]
name = "fun-images"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
csscolorparser = "0.7.2"
fastrand = "2.3.0"
image = "0.25.8"
imageproc = "0.25.0"
num-complex = "0.4.6"
png = "0.18.0"
primal = "0.3.3"
